# httplogmon

./: .gitignore  Dockerfile  README.md  notes.md  run-docker.sh  run-tests.sh  setup.cfg  setup.py  todo.md
httplogmon/: alert.py  conf.py  main.py  text.py
httplogmon/storage/: base.py  simple.py  stats.py
tests/: functional.py  test_main_alert.py  test_storage.py  test_text.py
