[metadata]
name = httplogmon
summary = Simple tool to monitor HTTP logs
description-file =
    README.md
author = Mario Villaplana
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages =
    httplogmon
